--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-[ ] UI shit
-    [ ] Center screen
-    [ ] Control screen size
+[V] UI shit
+    [V] Center screen
+    [V] Control screen size
 [ ] Add saves
 [ ] Separate to rooms
 [ ] Add HOTA
