semi working mobile

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 [V] UI shit
     [V] Center screen
     [V] Control screen size
+[ ] Touch to mouse
 [ ] Add saves
 [ ] Separate to rooms
 [ ] Add HOTA
